--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_localizations:
       sdk: flutter
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
+  get_it: ^7.7.0
+  shared_preferences: ^2.2.3
+  intl: ^0.19.0
+  fluttertoast: ^8.2.6
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -73,17 +78,17 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Cairo
+    - family: 'Cairo'
       fonts:
         - asset: assets/fonts/Cairo-Regular.ttf
-  #      - asset: fonts/Schyler-Italic.ttf
-  #        style: italic
-  #  - family: Trajan Pro
-  #    fonts:
-  #      - asset: fonts/TrajanPro.ttf
-  #      - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+        - asset: assets/fonts/Cairo-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Cairo-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Cairo-Bold.ttf
+          weight: 700
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 flutter_launcher_icons:
