--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.2.6
   smooth_page_indicator: ^1.1.0
   firebase_core: ^3.2.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
