--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   firebase_core: ^3.2.0
   dartz: ^0.10.1
+  firebase_auth: ^5.1.3
 
 dev_dependencies:
   flutter_test:
