--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_core: ^3.2.0
   dartz: ^0.10.1
   firebase_auth: ^5.1.3
+  flutter_bloc: ^8.1.6
+
 
 dev_dependencies:
   flutter_test:
