--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,7 @@ flutter {
 
 dependencies {
 
+    implementation 'com.facebook.android:facebook-login:latest.release'
 
     // Fix Duplicate class
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
